authentication still not workingv2

--- a/Views/index.ejs
+++ b/Views/index.ejs
@@ -8,6 +8,9 @@
     <h1>Welcome to BB's Poem Generator</h1>
     <% if (user) { %>
         <a href="/poems/wordForm">Create Your Poem</a>
+        <a href="/users/logon">
+            <button type="submit">Logon</button>
+            </a>
     <% } else { %>
         <div>
             <a href="/users/logon">
