--- a/Views/logon.ejs
+++ b/Views/logon.ejs
@@ -23,11 +23,21 @@
             </a>
         </div>
     </form>
+    <!-- <form action="/auth/openid" method="post">
+        <div>
+            <label>OpenID:</label>
+            <input type="text" name="openid_identifier"/><br/>
+        </div>
+        <div>
+            <input type="submit" value="Sign In"/>
+        </div>
+    </form>
+
     <div>
         <a href="/">
         <button type="home">Home</button>
         </a>
     </div>
-</main>
+</main> -->
 
 <%- include("partials/footer.ejs") %>
